fix: Allow OPTIONS preflight requests for CORS